# django-ninja-starter

./: LICENSE  README.md  gunicorn_config.py  manage.py  pyproject.toml
application/: __init__.py  admin.py  asgi.py  celery.py  urls.py  wsgi.py
application/settings/: __init__.py  common.py  cors.py  custom.py  db.py  logging.py  middleware.py  redis.py
apps/: api.py  constants.py
apps/base_app/controllers/: __init__.py  base_app.py
apps/base_app/schemes/: base_app.py
apps/base_app/services/: base_app.py
apps/demo/: __init__.py  admin.py  apps.py  const.py  models.py  urls.py  views.py
apps/demo/actions/: group.py
apps/demo/controllers/: __init__.py  demo.py
apps/demo/schemes/: demo.py
apps/demo/services/: demo.py
data/conf/nginx/: demo.conf  nginx.conf
data/conf/supervisord/: celery.ini  ecwit.ini
data/docs/: supervisord安装.md
data/scripts/: empty_log.sh
pkg/schemas/: common.py  typehint.py
pkg/utils/: common.py  ip.py  mixins.py
pkg/utils/redis/: data_queue.py
